# carbon-forecasting

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  retrain.yml
configs/: dataset_v1.yaml  train_tft.yaml
data/: .gitignore  processed.dvc  raw.dvc  training.dvc
data/processed/: dataset_v1_meta.json
data/training/: meta.yaml  scaler_X.save  scaler_y.save  test.pt  val.pt
docs/: model_architecture
models/: .gitignore  tft_prod.dvc
models/tft_prod/: best_model.pt  metadata.json  model.pt
scripts/: build_dataset.py  ingest_data.py  run_hpo.py  train.py
src/api/: dependencies.py  inference.py  main.py  schemas.py
src/data_ingestion/: fetch_carbon.py  fetch_weather.py  merge_sources.py  normalise.py
src/features/: build_features.py  dataset_builder.py  lag_features.py  rolling_features.py  time_features.py  validate.py
src/models/: loss.py  tft.py
src/training/: dataloaders.py  optuna_objective.py  train_tft.py
src/utils/: generate_lineage.py  plotting.py  visualise_model.py
